syntax = "proto3";

package identra.health.v1;

// Health check service for monitoring gateway status
service Health {
  // Check if the service is alive
  rpc Check(HealthCheckRequest) returns (HealthCheckResponse);
  
  // Watch for health status changes (streaming)
  rpc Watch(HealthCheckRequest) returns (stream HealthCheckResponse);
}

message HealthCheckRequest {
  string service = 1;
}

message HealthCheckResponse {
  enum ServingStatus {
    UNKNOWN = 0;
    SERVING = 1;
    NOT_SERVING = 2;
    SERVICE_UNKNOWN = 3;
  }
  
  ServingStatus status = 1;
  string message = 2;
  int64 uptime_seconds = 3;
}
